<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_one"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
android:gravity="center_vertical|center_horizontal"
tools:context=".ActivityOne">

<TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_one"
        android:textColor="#c0004fff"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/onCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_create_message" />

    <TextView
        android:id="@+id/onStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_start_message" />

    <TextView
        android:id="@+id/onResume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_resume_message" />

    <TextView
        android:id="@+id/onRestart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_restart_message" />

    <Button
        android:id="@+id/btnLaunchActivityTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_two" />
</LinearLayout>